--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux-thunk": "^2.3.0"
